--- a/openpose_ros_node/CMakeLists.txt
+++ b/openpose_ros_node/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 find_package(CUDA REQUIRED)
 find_package(gflags REQUIRED)
+find_package(OpenCV)
 
 catkin_package(
   CATKIN_DEPENDS
@@ -44,6 +45,8 @@ include_directories(
 )
 
 add_executable(${PROJECT_NAME} src/openpose_ros_node.cpp)
+
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 # Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}
